27_02_2025 ARRELO BUSCAR USUARIOS

--- a/src/app/Ui/Modules/configuration/Usuarios/components/tables/table-usuarios/table-usuarios.component.html
+++ b/src/app/Ui/Modules/configuration/Usuarios/components/tables/table-usuarios/table-usuarios.component.html
@@ -1,8 +1,8 @@
 <!-- =================================================================================== -->
 <!-- Apartado filtros -->
 <!-- =================================================================================== -->
-<div class="container">
-  <mat-form-field class="w-[20rem]">
+<div class="container mt-2 sm:mt-2 lg:mt-0">
+  <mat-form-field class="w-[100rem] lg:w-[20rem]">
     <mat-label>Buscar Usuario</mat-label>
     <span matTextPrefix> <mat-icon>search</mat-icon> &nbsp;</span>
     <input type="text"
