27_02_2025 CERRAR EDITAR EMPRESA EN USUARIOS

--- a/src/app/Ui/Modules/configuration/Usuarios/components/tables/table-usuarios/table-usuarios.component.html
+++ b/src/app/Ui/Modules/configuration/Usuarios/components/tables/table-usuarios/table-usuarios.component.html
@@ -84,7 +84,7 @@
                         (selectionChange)="guardarEmpresa(element)"
                       >
                         <!-- Opción actual -->
-                        <mat-option [value]="element.rucempresa">{{
+                        <mat-option (click)="cerrarEditEmpresa(element)" [value]="element.rucempresa">{{
                           element.rucempresa
                         }}</mat-option>
                         <hr />
