--- a/src/app/Ui/Modules/configuration/Empresas/components/tables/table-lista-empresas/table-lista-empresas.component.html
+++ b/src/app/Ui/Modules/configuration/Empresas/components/tables/table-lista-empresas/table-lista-empresas.component.html
@@ -1,108 +1,126 @@
-<header-table />
-
-<div class="mat-elevation-z8">
-  <table mat-table [dataSource]="dataSource">
-    <!-- =================================================================================== -->
-    <!-- Apartado documento -->
-    <!-- =================================================================================== -->
-    <ng-container matColumnDef="rucempresa">
-      <th mat-header-cell *matHeaderCellDef class="mat-primary">RUC</th>
-      <td class="rol" mat-cell *matCellDef="let element">
-        <div class="container-rucempresa">
-          <mat-icon>assignment_ind</mat-icon>
-          {{ element.rucempresa || "-" }}
-        </div>
-      </td>
-    </ng-container>
-
-    <!-- =================================================================================== -->
-    <!-- Apartado razon social -->
-    <!-- =================================================================================== -->
-    <ng-container matColumnDef="razonsocial">
-      <th mat-header-cell *matHeaderCellDef class="mat-primary">
-        Razon Social
-      </th>
-      <td class="rol" mat-cell *matCellDef="let element">
-        <div class="container-razonsocial">
-          <mat-icon>domain</mat-icon>
-          {{ element.razonsocial || "-" }}
-        </div>
-      </td>
-    </ng-container>
-
-    <!-- =================================================================================== -->
-    <!-- Apartado fecha registro -->
-    <!-- =================================================================================== -->
-    <ng-container matColumnDef="fecharegistro">
-      <th mat-header-cell *matHeaderCellDef class="mat-primary">
-        F. Registro
-      </th>
-      <td class="rol" mat-cell *matCellDef="let element">
-        <div class="container-razonsocial">
-          <mat-icon>event</mat-icon>
-          {{ element.fechacreacion ? (element.fechacreacion | date:'dd/MM/yyyy') : '-' }}
-        </div>
-      </td>
-    </ng-container>
-
-    <!-- =================================================================================== -->
-    <!-- Apartado estado -->
-    <!-- =================================================================================== -->
-    <ng-container matColumnDef="Estado">
-      <th mat-header-cell *matHeaderCellDef class="mat-accent">Estado</th>
-      <td mat-cell *matCellDef="let element">
-        <button
-          type="button"
-          class="block"
-          aria-haspopup="dialog"
-          aria-expanded="false"
-        >
-          @if (element.estado == "1") {
-          <body-table-estado-activo />
-          }@else {
-          <body-table-estado-inactivo />
-          }
-        </button>
-      </td>
-    </ng-container>
-
-    <!-- =================================================================================== -->
-    <!-- Apartado opciones -->
-    <!-- =================================================================================== -->
-    <ng-container matColumnDef="opciones">
-      <th mat-header-cell *matHeaderCellDef class="mat-accent"></th>
-      <td mat-cell *matCellDef="let element">
-        <div class="px-6 py-3 flex gap-2">
-          <button
-            (click)="DetalleEmpresas(element.rucempresa)"
-            data-bs-toggle="offcanvas"
-            data-bs-target="#detalleEmpresa"
-            aria-controls="detalleEmpresa"
-            class="btn py-2 px-3 inline-flex items-center gap-x-2 text-xs rounded-lg border border-gray-200 bg-white text-gray-800 shadow-sm hover:bg-gray-50 focus:outline-none focus:bg-gray-50 disabled:opacity-50 disabled:pointer-events-none"
-            type="button"
+<section>
+  <div class="max-w-[100rem] py-6 lg:py-4 mx-auto h-auto">
+    <div class="flex flex-col">
+      <div class="-m-1.5 overflow-x-auto">
+        <div class="p-1.5 min-w-full inline-block align-middle">
+          <div
+            class="bg-white border border-gray-200 rounded-xl shadow-sm overflow-hidden"
           >
-            <mat-icon>visibility</mat-icon>
-          </button>
+            <div class="mat-elevation-z8 h-auto">
+
+              <table mat-table [dataSource]="dataSource">
+                <!-- =================================================================================== -->
+                <!-- Apartado documento -->
+                <!-- =================================================================================== -->
+                <ng-container matColumnDef="rucempresa">
+                  <th mat-header-cell *matHeaderCellDef class="mat-primary">RUC</th>
+                  <td class="rol" mat-cell *matCellDef="let element">
+                    <button class="px-6 py-1 flex gap-2 align-center">
+                      <mat-icon class="icon-ruc">assignment_ind</mat-icon>
+                      <span class="text-sm text-gray-600 dark:text-neutral-400">
+                        {{ element.rucempresa || "-" }}
+                      </span>
+                    </button>
+
+                  </td>
+                </ng-container>
+
+                <!-- =================================================================================== -->
+                <!-- Apartado razon social -->
+                <!-- =================================================================================== -->
+                <ng-container matColumnDef="razonsocial">
+                  <th mat-header-cell *matHeaderCellDef class="mat-primary">
+                    Razon Social
+                  </th>
+                  <td class="rol" mat-cell *matCellDef="let element">
+                    <div class="container-razonsocial">
+                      <mat-icon>domain</mat-icon>
+                      {{ element.razonsocial || "-" }}
+                    </div>
+                  </td>
+                </ng-container>
+
+                <!-- =================================================================================== -->
+                <!-- Apartado fecha registro -->
+                <!-- =================================================================================== -->
+                <ng-container matColumnDef="fecharegistro">
+                  <th mat-header-cell *matHeaderCellDef class="mat-primary">
+                    F. Registro
+                  </th>
+                  <td class="rol" mat-cell *matCellDef="let element">
+                    <div class="container-razonsocial">
+                      <mat-icon>event</mat-icon>
+                      {{ element.fechacreacion ? (element.fechacreacion | date:'dd/MM/yyyy') : '-' }}
+                    </div>
+                  </td>
+                </ng-container>
+
+                <!-- =================================================================================== -->
+                <!-- Apartado estado -->
+                <!-- =================================================================================== -->
+                <ng-container matColumnDef="Estado">
+                  <th mat-header-cell *matHeaderCellDef class="mat-accent">Estado</th>
+                  <td mat-cell *matCellDef="let element">
+                    <button
+                      type="button"
+                      class="block"
+                      aria-haspopup="dialog"
+                      aria-expanded="false"
+                    >
+                      @if (element.estado == "1") {
+                      <body-table-estado-activo />
+                      }@else {
+                      <body-table-estado-inactivo />
+                      }
+                    </button>
+                  </td>
+                </ng-container>
+
+                <!-- =================================================================================== -->
+                <!-- Apartado opciones -->
+                <!-- =================================================================================== -->
+                <ng-container matColumnDef="opciones">
+                  <th mat-header-cell *matHeaderCellDef class="mat-accent"></th>
+                  <td mat-cell *matCellDef="let element">
+                    <div class="px-1 py-3 flex gap-2">
+                      <button
+                        (click)="DetalleEmpresas(element.rucempresa)"
+                        data-bs-toggle="offcanvas"
+                        data-bs-target="#detalleEmpresa"
+                        aria-controls="detalleEmpresa"
+                        class=" py-2 px-3  flex items-center justify-center gap-x-2 text-xs rounded-lg  bg-white text-gray-800 hover:shadow-sm hover:bg-gray-50 focus:outline-none focus:bg-gray-50 disabled:opacity-50 disabled:pointer-events-none "
+                        type="button"
+                      >
+                        <mat-icon>visibility</mat-icon>
+                      </button>
+                    </div>
+                  </td>
+                </ng-container>
+
+                <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+                <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+              </table>
+
+              <!-- =================================================================================== -->
+              <!-- Apartado paginado -->
+              <!-- =================================================================================== -->
+              <mat-paginator
+                [pageSizeOptions]="[5, 10, 15, 20]"
+                showFirstLastButtons
+                aria-label="Select page of periodic elements"
+              >
+              </mat-paginator>
+
+
+            </div>
+          </div>
         </div>
-      </td>
-    </ng-container>
+      </div>
+    </div>
+  </div>
+</section>
 
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
-  </table>
 
-  <!-- =================================================================================== -->
-  <!-- Apartado paginado -->
-  <!-- =================================================================================== -->
-  <mat-paginator
-    [pageSizeOptions]="[5, 10, 15, 20]"
-    showFirstLastButtons
-    aria-label="Select page of periodic elements"
-  >
-  </mat-paginator>
-</div>
-
-<footer-general />
 <detalle-empresa-page
   [detalleEmpresa]="detalleEmpresa"
   [listaSucursales]="sucursales"
