--- a/src/app/Ui/Modules/configuration/Tipo_usuario/page/tipo-usuario-page/tipo-usuario-page.component.html
+++ b/src/app/Ui/Modules/configuration/Tipo_usuario/page/tipo-usuario-page/tipo-usuario-page.component.html
@@ -1,3 +1,38 @@
+<!-- ========== START - HEADER ========== -->
+<header class="sticky top-0 inset-x-0 flex flex-wrap md:justify-start md:flex-nowrap z-[48] w-full bg-white border-b text-sm py-2.5 lg:ps-[260px] dark:bg-neutral-800 dark:border-neutral-700">
+  <nav class="px-4 sm:px-6 flex basis-full items-center w-full mx-auto">
+    <div class="me-5 lg:me-0 lg:hidden">
+      <a class="flex-none rounded-md text-xl  no-underline font-semibold" aria-label="Preline">
+        <h3 class="md:flex-1"> <span>TIPO USUARIO</span></h3>
+      </a>
+
+      <div class="lg:hidden ms-1">
+
+      </div>
+    </div>
+
+    <div class="w-full flex items-center justify-end ms-auto md:justify-between gap-x-1 md:gap-x-3">
+
+      <div class="hidden lg:block">
+        <h3 class="flex flex-row items-center justify-end gap-1"> <span>TIPO USUARIO</span></h3>
+      </div>
+
+      <div class="md:block">
+        <div class="relative">
+
+          <!-- <button type="button" class="py-2 px-3 inline-flex items-center gap-x-2 text-sm font-medium rounded-lg border border-transparent bg-blue-600 text-white hover:bg-blue-700 focus:outline-none focus:bg-blue-700 disabled:opacity-50 disabled:pointer-events-none" data-bs-toggle="modal" data-bs-target="#modalRegistroUsuario">
+            <svg class="shrink-0 size-4" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M5 12h14"/><path d="M12 5v14"/></svg>
+            Nuevo
+          </button> -->
+        </div>
+      </div>
+
+    </div>
+  </nav>
+</header>
+<!-- ========== END - HEADER ========== -->
+
+
 
 <div class="w-full lg:ps-64">
   <div class="w-full lg:ps-0 bg-fondo-datos">
