--- a/src/app/Ui/Modules/Carga_Inventario/Page/lista-carga-inventarios/lista-carga-inventarios.component.css
+++ b/src/app/Ui/Modules/Carga_Inventario/Page/lista-carga-inventarios/lista-carga-inventarios.component.css
@@ -18,6 +18,19 @@ section {
   background-color: rgb(243, 243, 243);
 }
 
+h3 {
+  flex: 1;
+  text-align: left;
+  font-size: 1.5rem;
+  color: white;
+  margin-bottom: 0;
+}
+
+h3 span {
+  color: #20477E;
+}
+
+
 
 
 @media (max-width: 480px) {
