--- a/src/app/Ui/Modules/reportes/reports/reporte-inventario/reporte-inventario.component.css
+++ b/src/app/Ui/Modules/reportes/reports/reporte-inventario/reporte-inventario.component.css
@@ -1,3 +1,16 @@
+h3 {
+  flex: 1;
+  text-align: left;
+  font-size: 1.5rem;
+  color: white;
+  margin-bottom: 0;
+}
+
+h3 span {
+  color: #20477E;
+}
+
+
 table th {
   background-color: #F9FAFB;
 }
